NetBSD Problem Report #50626

From www@NetBSD.org  Wed Jan  6 01:21:14 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 9EE4F7A214
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  6 Jan 2016 01:21:14 +0000 (UTC)
Message-Id: <20160106012113.812AB7ACBC@mollari.NetBSD.org>
Date: Wed,  6 Jan 2016 01:21:13 +0000 (UTC)
From: vchaves@ymail.com
Reply-To: vchaves@ymail.com
To: gnats-bugs@NetBSD.org
Subject: acpi_display.c erroneously sends character to console during boot
X-Send-Pr-Version: www-1.0

>Number:         50626
>Category:       kern
>Synopsis:       acpi_display.c erroneously sends character to console during boot
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 06 01:25:00 +0000 2016
>Closed-Date:    Mon May 30 03:22:47 +0000 2016
>Last-Modified:  Mon May 30 03:22:47 +0000 2016
>Originator:     Vicente Chaves de Melo
>Release:        netbsd-current
>Organization:
>Environment:
NetBSD dm4.st3tailor.net 7.99.25 NetBSD 7.99.25 (GENERIC) #6: Sat Jan  2 22:58:52 BRST 2016  root@dm4.st3tailor.net:/root/sysbuild/amd64/obj/usr/src/sys/arch/amd64/compile/GENERIC amd64

>Description:
Appears a character ']' on console during acpiout attach
>How-To-Repeat:
booting netbsd-current on a laptop HP dm4-2175br
>Fix:
cvs diff: Diffing sys/dev/acpi
Index: sys/dev/acpi/acpi_display.c
===================================================================
RCS file: /cvsroot/src/sys/dev/acpi/acpi_display.c,v
retrieving revision 1.12
diff -u -r1.12 acpi_display.c
--- sys/dev/acpi/acpi_display.c 14 Oct 2014 19:50:57 -0000      1.12
+++ sys/dev/acpi/acpi_display.c 6 Jan 2016 01:03:15 -0000
@@ -1895,7 +1895,7 @@
        }

        if (l > 1)
-               printf("]");
+               (*pr)("]");
 }

 static void
cvs diff: Diffing sys/dev/acpi/acpica
cvs diff: Diffing sys/dev/acpi/wmi

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50626 CVS commit: src/sys/dev/acpi
Date: Tue, 5 Jan 2016 20:37:17 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Jan  6 01:37:17 UTC 2016

 Modified Files:
 	src/sys/dev/acpi: acpi_display.c

 Log Message:
 PR/50626: Vicente Chaves de Melo: acpi_display.c erroneously sends character
 to console during boot


 To generate a diff of this commit:
 cvs rdiff -u -r1.12 -r1.13 src/sys/dev/acpi/acpi_display.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 03:22:47 +0000
State-Changed-Why:
christos committed a fix in January


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.