PR/50626: Vicente Chaves de Melo: acpi_display.c erroneously sends character to console during boot