sys/dev/acpi/acpi_display.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: acpi_display.c,v 1.12 2014/10/14 19:50:57 christos Exp $	*/
+/*	$NetBSD: acpi_display.c,v 1.13 2016/01/06 01:37:17 christos Exp $	*/
 
 /*-
  * Copyright (c) 2010 The NetBSD Foundation, Inc.
@@ -66,7 +66,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: acpi_display.c,v 1.12 2014/10/14 19:50:57 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: acpi_display.c,v 1.13 2016/01/06 01:37:17 christos Exp $");
 
 #include <sys/param.h>
 #include <sys/device.h>
@@ -1895,7 +1895,7 @@ ranger(uint8_t *a, size_t l, void (*pr)(const char *, ...) __printflike(1, 2))
 	}
 
 	if (l > 1)
-		printf("]");
+		(*pr)("]");
 }
 
 static void
